v2.1.1 full responsive initial; fixed product align centre

--- a/blog/static/blog/css/base.css
+++ b/blog/static/blog/css/base.css
@@ -2354,6 +2354,9 @@ footer{
     .mobile-view {
         display: none;
     }
+    .product-first p{
+        text-align: center;
+    }
 
 
     .product-first img{
